log4shell/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log4shell
  labels:
    app: log4shell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log4shell
  template:
    metadata:
      labels:
        app: log4shell
    spec:
      containers:
        - name: log4shell
          image: ghcr.io/christophetd/log4shell-vulnerable-app
          ports:
          - containerPort: 8080
