log4shell/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log4shell
spec:
  type: LoadBalancer
  selector:
    app: log4shell
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
